Fix grid card overflow, when bigger than the cell

--- a/src/mixins/core/_card.core.scss
+++ b/src/mixins/core/_card.core.scss
@@ -1,8 +1,8 @@
 @mixin chewing-grid__card()
 {
   /* Flex implementation */
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
   
   /* Centered card */
   display: block;
