--- a/test/column-max-count.css
+++ b/test/column-max-count.css
@@ -15,7 +15,8 @@
   /* Unset list styles */
   list-style: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 .chew-cell {
   /* Flex implementation */
   -ms-flex: 1 0 auto;
@@ -41,7 +42,8 @@
   /* [fix] IE `flex-basis` doesn't account for `box-sizing: border-box` */
   width: 33.33333%;
   /* Trigger item wrapping with flexbox & inline-block */
-  min-width: 200px; }
+  min-width: 200px;
+}
 .chew-cell.chew-cell--ghost {
   /* Could be use to create ghost cells 
      And prevent your last item to expand
@@ -49,12 +51,14 @@
   */
   visibility: hidden;
   height: 0;
-  padding: 0; }
+  padding: 0;
+}
 .chew-card {
   /* Flex implementation */
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
   /* Centered card */
   display: block;
   margin: 0 auto;
-  max-width: 300px; }
+  max-width: 300px;
+}
