--- a/test/mapado.css
+++ b/test/mapado.css
@@ -57,8 +57,8 @@
 }
 #mapado-plugin .chew-card {
   /* Flex implementation */
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
   /* Centered card */
   display: block;
   margin: 0 auto;
